--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -50,6 +50,8 @@ services:
     depends_on:
       - db
       - redis
+      - tor
+      - privoxy
     volumes:
       - ./public/system:/mastodon/public/system
 
