--- a/config/settings.yml
+++ b/config/settings.yml
@@ -33,10 +33,9 @@ defaults: &defaults
   noindex: false
   theme: 'default'
   aggregate_reblogs: true
-  advanced_layout: false
+  advanced_layout: true
   use_blurhash: true
   home_dms: false
-  advanced_layout: false
   notification_emails:
     follow: false
     reblog: false
