--- a/config/settings.yml
+++ b/config/settings.yml
@@ -14,6 +14,7 @@ defaults: &defaults
   max_toot_chars: 500
   profile_directory: true
   closed_registrations_message: ''
+  nodeinfo_show_blocks: true
   open_deletion: true
   min_invite_role: 'admin'
   timeline_preview: true
