--- a/config/themes.yml
+++ b/config/themes.yml
@@ -6,6 +6,7 @@ cybrespace-windows95: styles/win95.scss
 geodude: styles/geodude.scss
 mastodon: styles/application.scss
 mastodon-light: styles/mastodon-light.scss
+meemu-org: styles/meemu.scss
 royal-tenenbaums: styles/royal-tenenbaums.scss
 sleeping-town: styles/sleepingtown.scss
 witches-town: styles/witches-town.scss
