--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,7 +3,13 @@ services:
 
   db:
     restart: always
+    env_file: .env.production
+    environment:
+      - POSTGRES_USER=$DB_USER
+      - POSTGRES_PASSWORD=$DB_PASS
+      - POSTGRES_HOST_AUTH_METHOD=trust
     image: postgres:9.6-alpine
+    shm_size: 256mb
     networks:
       - internal_network
     healthcheck:
@@ -20,18 +26,18 @@ services:
       test: ["CMD", "redis-cli", "ping"]
     volumes:
       - ./redis:/data
-##   es:
-##    restart: always
-##    image: docker.elastic.co/elasticsearch/elasticsearch-oss:6.1.3
-##    environment:
-##      - "ES_JAVA_OPTS=-Xms512m -Xmx512m"
-##    networks:
-##      - external_network
-##      - internal_network
-##    healthcheck:
-##      test: ["CMD-SHELL", "curl --silent --fail localhost:9200/_cluster/health || exit 1"]
-##    volumes:
-##      - ./elasticsearch:/usr/share/elasticsearch/data
+
+  #  es:
+  #    restart: always
+  #    image: docker.elastic.co/elasticsearch/elasticsearch-oss:6.1.3
+  #    environment:
+  #      - "ES_JAVA_OPTS=-Xms512m -Xmx512m"
+  #    networks:
+  #      - internal_network
+  #    healthcheck:
+  #      test: ["CMD-SHELL", "curl --silent --fail localhost:9200/_cluster/health || exit 1"]
+  #    volumes:
+  #      - ./elasticsearch:/usr/share/elasticsearch/data
 
   web:
     build: .
@@ -49,8 +55,7 @@ services:
     depends_on:
       - db
       - redis
-##      - tor
-##      - privoxy
+    #      - es
     volumes:
       - ./public/system:/mastodon/public/system
 
@@ -70,8 +75,6 @@ services:
     depends_on:
       - db
       - redis
-##      - tor
-##      - privoxy
 
   sidekiq:
     build: .
@@ -82,29 +85,27 @@ services:
     depends_on:
       - db
       - redis
-##      - tor
-##      - privoxy
     networks:
       - external_network
       - internal_network
     volumes:
       - ./public/system:/mastodon/public/system
-
 ## Uncomment to enable federation with tor instances along with adding the following ENV variables
 ## http_proxy=http://privoxy:8118
 ## ALLOW_ACCESS_TO_HIDDEN_SERVICE=true
-##   tor:
-## image: sirboops/tor
-## networks:
-##   - external_network
-##   - internal_network
-## privoxy:
-##  image: sirboops/privoxy
-## volumes:
-##  - ./priv-config:/opt/config
-## networks:
-##  - external_network
-##  - internal_network
+#  tor:
+#    image: sirboops/tor
+#    networks:
+#      - external_network
+#      - internal_network
+#
+#  privoxy:
+#    image: sirboops/privoxy
+#    volumes:
+#      - ./priv-config:/opt/config
+#    networks:
+#      - external_network
+#      - internal_network
 
 networks:
   external_network:
